# argos

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
architecture/: autoresearch.md  layers.md  overview.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
prompts/trained/: ackman.md  alpha_discovery.md  aschenbrenner.md  autonomous_execution.md  baker.md  biotech.md  central_bank.md  china.md  cio.md  commodities.md  consumer.md  cro.md  dollar.md  druckenmiller.md  emerging_markets.md  energy.md  financials.md  geopolitical.md  industrials.md  institutional_flow.md  news_sentiment.md  relationship_mapper.md  semiconductor.md  volatility.md  yield_curve.md
src/: README.md  __init__.py  api.py  config.py
src/agents/: autoresearch.py  backtest_loop.py  eod_cycle.py  eod_store.py  market_data.py  scorecard.py  universe.py
src/broker/: alpaca.py
src/utils/: git_ops.py  llm.py  logging.py
